Add instrumentation + undo/redo support

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -6691,6 +6691,13 @@
       },
       "label": "Hide"
     },
+    "variable-list": {
+      "create-drag-end-handler": {
+        "description": {
+          "reorder-variables-list": "Reorder variables list"
+        }
+      }
+    },
     "variable-multi-prop-static-options-form": {
       "aria-label-static-options": "Static options"
     },
