--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -3740,6 +3740,9 @@
       "manage-permissions": "Manage permissions",
       "move": "Move this folder"
     },
+    "folder-owners": {
+      "owned-by": "Owned by:"
+    },
     "folder-picker": {
       "accessible-label": "Select folder: {{ label }} currently selected",
       "button-label": "Select folder",
@@ -11229,6 +11232,9 @@
   "org-picker": {
     "noOptionsMessage-no-organizations-found": "No organizations found",
     "select-placeholder": "Select organization"
+  },
+  "owner-reference": {
+    "team-members": "Team members:"
   },
   "page": {
     "editable-title": {
