--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -4950,6 +4950,7 @@
       },
       "variables": {
         "add-variable": "Add variable",
+        "reorder": "Drag to reorder",
         "select-type": "Choose variable type",
         "select-type-card-tooltip": "Click to select type",
         "select-variable": "Select"
@@ -6692,6 +6693,13 @@
         }
       },
       "label": "Hide"
+    },
+    "variable-list": {
+      "create-drag-end-handler": {
+        "description": {
+          "reorder-variables-list": "Reorder variables list"
+        }
+      }
     },
     "variable-multi-prop-static-options-form": {
       "aria-label-static-options": "Static options"
