--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -930,9 +930,9 @@
         "parse-mode-warning-title": "Telegram messages are limited to 4096 UTF-8 characters."
       },
       "used-by_one": "Used by {{ count }} notification policy",
-      "used-by_other": "Used by {{ count }} notification policy",
+      "used-by_other": "Used by {{ count }} notification policies",
       "used-by-rules_one": "Used by {{ count }} alert rule",
-      "used-by-rules_other": "Used by {{ count }} alert rule"
+      "used-by-rules_other": "Used by {{ count }} alert rules"
     },
     "contact-points-filter": {
       "aria-label-clear": "clear",
