--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12679,7 +12679,7 @@
       "hide": "Hide response",
       "hide-help": "Hide data source help",
       "inspector": "Query inspector",
-      "more-actions": "More query actions",
+      "more-actions": "More actions",
       "remove": "Remove transformation",
       "show": "Show response",
       "show-help": "Show data source help"
