add lightbulb icon, fix unit tests

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11797,8 +11797,8 @@
   "provisioned-resource-form": {
     "save-or-delete-resource-shared-fields": {
       "comment-placeholder-describe-changes-optional": "Add a note to describe your changes (optional)",
-      "description-branch-name-in-git-hub": "Branch name in GitHub",
-      "description-branch-workflow-not-allowed": "Creating a new branch is not allowed for this repository.",
+      "description-branch": "Select an existing branch or enter a new branch name to create a branch",
+      "description-branch-restricted": "This repository is restricted to the configured branch only",
       "description-file-path": "File path inside the repository (.json or .yaml)",
       "description-folder-path": "Folder path inside the repository",
       "description-inside-repository": "",
@@ -11806,13 +11806,12 @@
       "label-branch": "Branch",
       "label-comment": "Comment",
       "label-path": "Path",
-      "label-workflow": "Workflow",
       "placeholder-branch": "Select or enter branch name",
-      "placeholder-new-branch": "Enter new branch name",
       "suffix-configured-branch": "Configured branch",
       "suffix-last-used": "Last branch",
       "suffix-pr-branch": "Pull request branch",
-      "suffix-read-only-branch": " (read-only)"
+      "suffix-read-only-branch": " (read-only)",
+      "tip-create-branch": "Tip: Type a name and press Enter to create a new branch"
     }
   },
   "provisioned-resource-preview-banner": {
@@ -12495,10 +12494,6 @@
       "button-submitting": "Submitting...",
       "error-instance-repository-exists": "Instance repository already exists",
       "error-save-repository-setting": "Failed to save repository setting"
-    },
-    "workflow-options-label": {
-      "push-to-a-new-branch": "Push to a new branch",
-      "push-to-existing-branch": "Push to an existing branch"
     }
   },
   "provisioning-alert": {
