Provisioning: Always show tabs with smart default selection
- Remove early return that hides tabs when no repositories exist
- Fetch connections at HomePage level to determine smart default tab
- Default to getting-started tab when both repos and connections are empty
- Add empty states to RepositoryList when no repositories exist
- Hide filter input in ConnectionList when no connections exist
- Hide action button when on getting-started tab
- Update available repositories heading text for clarity

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11932,7 +11932,7 @@
       "alert-connection-deleted": "Connection deleted",
       "alert-connection-saved": "Connection saved",
       "alert-connection-updated": "Connection updated",
-      "available-repositories": "Other available repositories",
+      "available-repositories": "This connection has access to the following repositories",
       "back-to-connections": "Back to connections",
       "button-save": "Save",
       "button-saving": "Saving...",
@@ -12275,6 +12275,9 @@
       "sync-job": {
         "view-repository": "View repository"
       }
+    },
+    "repository-list": {
+      "no-repositories": "No repositories configured"
     },
     "repository-overview": {
       "checked": "Checked:",
