--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11934,7 +11934,7 @@
       "alert-connection-deleted": "Connection deleted",
       "alert-connection-saved": "Connection saved",
       "alert-connection-updated": "Connection updated",
-      "available-repositories": "Other available repositories",
+      "available-repositories": "This connection has access to the following repositories",
       "back-to-connections": "Back to connections",
       "button-save": "Save",
       "button-saving": "Saving...",
@@ -12277,6 +12277,9 @@
       "sync-job": {
         "view-repository": "View repository"
       }
+    },
+    "repository-list": {
+      "no-repositories": "No repositories configured"
     },
     "repository-overview": {
       "checked": "Checked:",
