--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12721,6 +12721,10 @@
       "show-help": "Show data source help"
     },
     "edit-query-name": "Edit query name",
+    "header": {
+      "expression": "Expression",
+      "transformation": "Transformation"
+    },
     "help": {
       "close": "Close help",
       "close-aria": "Close help panel"
