chore: run Skipping i18n extract for Enterprise: not enabled Extracting i18n strings for OSS yarn run i18next-cli extract --sync-primary Extracting i18n strings for packages yarn run packages:i18n-extract
 NX   The following projects do not have a configuration for any of the provided targets ("i18n-extract")

- @grafana/o11y-ds-frontend
- @grafana/plugin-configs
- @grafana/e2e-selectors
- @grafana/eslint-plugin
- @grafana/api-clients
- @grafana/flamegraph
- @grafana/test-utils
- @grafana/runtime
- @grafana/schema
- @grafana/data
- @grafana/i18n
- @grafana/ui

 NX   Running target i18n-extract for 3 projects:

- @grafana/prometheus
- @grafana/alerting
- @grafana/sql

> nx run @grafana/alerting:i18n-extract

- Running i18next key extractor...

[32m✔[39m [1mExtraction complete![22m

> nx run @grafana/sql:i18n-extract

- Running i18next key extractor...

[32m✔[39m [1mExtraction complete![22m

> nx run @grafana/prometheus:i18n-extract

- Running i18next key extractor...

[32m✔[39m [1mExtraction complete![22m

 NX   Successfully ran target i18n-extract for 3 projects

Extracting i18n strings for plugins
yarn run plugin:i18n-extract

 NX   The following projects do not have a configuration for any of the provided targets ("i18n-extract")

- @grafana-plugins/grafana-postgresql-datasource
- @grafana-plugins/grafana-pyroscope-datasource
- @grafana-plugins/grafana-testdata-datasource
- @grafana-plugins/stackdriver
- @grafana-plugins/elasticsearch
- @grafana-plugins/graphite
- @grafana-plugins/opentsdb
- @grafana-plugins/jaeger
- @grafana-plugins/zipkin
- @grafana-plugins/mysql
- @grafana-plugins/parca
- @grafana-plugins/tempo
- @grafana-plugins/loki

 NX   Running target i18n-extract for 2 projects:

- @grafana-plugins/grafana-azure-monitor-datasource
- @grafana-plugins/mssql

> nx run @grafana-plugins/mssql:i18n-extract

- Running i18next key extractor...

[32m✔[39m [1mExtraction complete![22m

> nx run @grafana-plugins/grafana-azure-monitor-datasource:i18n-e

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -6434,6 +6434,8 @@
       "title-delete-all-transformations": "Delete all transformations?"
     },
     "panel-edit-controls": {
+      "query-editor-version": "Query editor v2",
+      "query-editor-version-toggle": "Toggle between query editor v1 and v2",
       "table-view-aria-label-toggletableview": "Toggle table view",
       "table-view-label-table-view": "Table view"
     },
