Provisioning: Replace retry prop with generic action in ProvisioningAlert
Replace the hardcoded retry prop with a flexible action prop that supports
both callback actions (onClick) and link actions (href). This enables
showing contextual actions like "Upgrade account" for quota exceeded errors.

- Add AlertAction interface with label, onClick, href, and external props
- Update StepStatusInfo type to use action instead of retry
- Add "Upgrade account" link action for quota exceeded errors
- Use window.open with sanitizeUrl for external link actions
- Add tests for ProvisioningAlert action functionality

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11957,8 +11957,10 @@
       "folders-count_other": "{{count}} folder",
       "label-display-name": "Display name",
       "placeholder-my-repository-connection": "My repository connection",
+      "retry-action": "Retry",
       "text-loading-resource-information": "Loading resource information...",
-      "unmanaged-resources-label": "Unmanaged resources"
+      "unmanaged-resources-label": "Unmanaged resources",
+      "upgrade-action": "Upgrade account"
     },
     "check-repository": {
       "check": "Check"
@@ -12583,9 +12585,6 @@
       "push-to-a-new-branch": "Push to a new branch",
       "push-to-existing-branch": "Push to an existing branch"
     }
-  },
-  "provisioning-alert": {
-    "retry": "Retry"
   },
   "public-dashboard": {
     "acknowledgment-checkboxes": {
