--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -6217,9 +6217,11 @@
       }
     },
     "annotation-query-editor-button": {
-      "aria-label-toggle-menu": "Toggle menu",
-      "menu-actions": {
-        "label-select-from-query-library": "Select from query library"
+      "aria-label-toggle-menu": "Toggle menu"
+    },
+    "annotation-query-library-dropdown": {
+      "menu-overlay": {
+        "label-use-saved-query": "Use saved query"
       }
     },
     "annotation-settings-edit": {
