--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12103,6 +12103,8 @@
       "description-clear-repository-connection": "Add a clear name for this repository connection",
       "empty": "Empty",
       "error-field-required": "This field is required.",
+      "error-repository-status-timeout-message": "The repository did not become healthy within 30 seconds. Please check the repository settings and try again.",
+      "error-repository-status-timeout-title": "Repository health check timed out",
       "error-repository-status-unhealthy-message": "There was an issue connecting to the repository. Please check the repository settings and try again.",
       "error-repository-status-unhealthy-title": "Repository status unhealthy",
       "external-storage-label": "External storage",
@@ -12113,6 +12115,7 @@
       "label-display-name": "Display name",
       "placeholder-my-repository-connection": "My repository connection",
       "text-loading-resource-information": "Loading resource information...",
+      "text-waiting-for-repository-health": "Waiting for repository to become healthy...",
       "unmanaged-resources-label": "Unmanaged resources"
     },
     "check-repository": {
