Apply UX feedback
- Change to Ghost styling
- Update copy
- Keep buttons on the same line
- Update tests

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -6058,11 +6058,12 @@
     "browse-grafana-com": "Browse Grafana.com",
     "browse-plugins": "Browse plugins",
     "card": {
+      "customize-with-assistant-button": "Customize with Assistant",
       "datasource-provided-badge": "Data source provided",
       "details-tooltip": "Details",
       "no-preview": "No preview available",
-      "use-template-button": "Use template",
-      "use-with-assistant-button": "Use with Grafana Assistant"
+      "use-dashboard-button": "Use dashboard",
+      "view-template-button": "View template"
     },
     "community-empty-title": "No community dashboards found",
     "community-empty-title-with-datasource": "No {{datasourceType}} community dashboards found",
