--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12045,7 +12045,7 @@
       "label-workflow": "Workflow",
       "placeholder-branch": "Select or enter branch name",
       "placeholder-new-branch": "Enter new branch name",
-      "suffix-configured-branch": "Configured branch",
+      "suffix-configured-branch": "Synchronized branch",
       "suffix-last-used": "Last branch",
       "suffix-pr-branch": "Pull request branch"
     }
@@ -12074,7 +12074,7 @@
       "branch-description": "The branch to use for provisioning",
       "branch-label": "Branch",
       "branch-required": "Branch is required",
-      "path-description": "Optional subdirectory path within the repository",
+      "path-description": "Path to the subdirectory with the resources you want to sync. Set to Grafana by default. Update if using a folder different from Grafana.",
       "path-label": "Path",
       "permissions": {
         "pull-requests-label": "Pull requests",
@@ -12100,7 +12100,7 @@
     "bootstrap-step": {
       "dashboards-count_one": "{{count}} dashboard",
       "dashboards-count_other": "{{count}} dashboard",
-      "description-clear-repository-connection": "Add a clear name for this repository connection",
+      "description-clear-repository-connection": "This name will be used for the repository connection and the folder displayed on the UI",
       "empty": "Empty",
       "error-field-required": "This field is required.",
       "error-repository-status-unhealthy-message": "There was an issue connecting to the repository. Please check the repository settings and try again.",
@@ -12252,8 +12252,8 @@
     "empty-state": {
       "no-jobs": "No jobs..."
     },
-    "enable-push-to-configured-branch-description": "Allow direct commits to the configured branch.",
-    "enable-push-to-configured-branch-label": "Enable push to configured branch",
+    "enable-push-to-configured-branch-description": "Allow direct commits to the synchronized branch.",
+    "enable-push-to-configured-branch-label": "Enable push to synchronized branch",
     "enhanced-features": {
       "description": "Get the most out of your GitHub integration with these optional add-ons",
       "description-instant-updates": "Get instant updates in Grafana as soon as changes are committed. Review and approve changes using pull requests before they go live.",
@@ -12344,7 +12344,7 @@
       "branch-description": "The branch to use for provisioning",
       "branch-label": "Branch",
       "branch-required": "Branch is required",
-      "path-description": "Optional subdirectory path within the repository",
+      "path-description": "Path to the subdirectory with the resources you want to sync. Set to Grafana by default. Update if using a folder different from Grafana.",
       "path-label": "Path",
       "pr-workflow-description": "Allows users to choose whether to open a pull request when saving changes. If the repository does not allow direct changes to the main branch, a pull request may still be required.",
       "pr-workflow-label": "Enable pull request option when saving",
@@ -12363,7 +12363,7 @@
       "branch-description": "The branch to use for provisioning",
       "branch-label": "Branch",
       "branch-required": "Branch is required",
-      "path-description": "Optional subdirectory path within the repository",
+      "path-description": "Path to the subdirectory with the resources you want to sync. Set to Grafana by default. Update if using a folder different from Grafana.",
       "path-label": "Path",
       "pr-workflow-description": "Allows users to choose whether to open a pull request when saving changes. If the repository does not allow direct changes to the main branch, a pull request may still be required.",
       "pr-workflow-label": "Enable pull request option when saving",
@@ -12379,7 +12379,7 @@
       "branch-description": "The branch to use for provisioning",
       "branch-label": "Branch",
       "branch-required": "Branch is required",
-      "path-description": "Optional subdirectory path within the repository",
+      "path-description": "Path to the subdirectory with the resources you want to sync. Set to Grafana by default. Update if using a folder different from Grafana.",
       "path-label": "Path",
       "permissions": {
         "api": "API",
@@ -12649,7 +12649,7 @@
     },
     "synchronize-step": {
       "instance-migrate-resources-description": "Instance sync requires all resources to be managed. Existing resources will be migrated automatically.",
-      "migrate-resources-description": "Import existing dashboards from all folders into the new provisioned folder",
+      "migrate-resources-description": "Import existing dashboards from connected external storage into the provisioning folder created in the previous step",
       "options": "Options",
       "repository-error": "Repository error",
       "repository-error-message": "Unable to check repository status. Please verify the repository configuration and try again.",
@@ -12666,7 +12666,7 @@
         "token-text": "GitLab Personal Access Token"
       },
       "go-to": "Go to",
-      "make-sure": "Make sure to include these permissions"
+      "make-sure": "Create a token with these permissions"
     },
     "warning-title-default": "Warning",
     "wizard": {
