Provisioning: Block repository sync if free-tier quota exceeded (#117328)
* Provisioning: Add quota exceeded message

* Provisioning: Improve sync job error details and fix quota tests

- Extract and display error details when sync job creation fails
- Update quota exceeded tests to use resourceCount instead of fileCount to align with implementation

* cleanup

* i18n

* Provisioning: Replace retry prop with generic action in ProvisioningAlert

Replace the hardcoded retry prop with a flexible action prop that supports
both callback actions (onClick) and link actions (href). This enables
showing contextual actions like "Upgrade account" for quota exceeded errors.

- Add AlertAction interface with label, onClick, href, and external props
- Update StepStatusInfo type to use action instead of retry
- Add "Upgrade account" link action for quota exceeded errors
- Use window.open with sanitizeUrl for external link actions
- Add tests for ProvisioningAlert action functionality

* tweak

* update tests

* codeformat

* Provisioning: Disable repository creation for free-tier users at connection limit

Implement connection limit enforcement for free-tier Grafana users.
When a free-tier user reaches the 1-connection limit, disable the
ability to create new repository connections and show appropriate
visual feedback with a FreeTierLimitNote.

Changes:
- Add FREE_TIER_CONNECTION_LIMIT constant (1 connection max)
- Calculate connection limit exceeded state in GettingStarted
- Thread disabled state through FeaturesList to RepositoryTypeCards
- Style disabled cards with cursor: not-allowed and secondary text color
- Show FreeTierLimitNote when limit is exceeded

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12103,6 +12103,8 @@
       "description-clear-repository-connection": "Add a clear name for this repository connection",
       "empty": "Empty",
       "error-field-required": "This field is required.",
+      "error-quota-exceeded-message": "The repository contains {{resourceCount}} resources, which exceeds the free-tier limit of {{limit}} resources per folder. To sync this repository, upgrade your account or reduce the number of resources.",
+      "error-quota-exceeded-title": "Resource quota exceeded",
       "error-repository-status-unhealthy-message": "There was an issue connecting to the repository. Please check the repository settings and try again.",
       "error-repository-status-unhealthy-title": "Repository status unhealthy",
       "external-storage-label": "External storage",
@@ -12112,8 +12114,10 @@
       "folders-count_other": "{{count}} folder",
       "label-display-name": "Display name",
       "placeholder-my-repository-connection": "My repository connection",
+      "retry-action": "Retry",
       "text-loading-resource-information": "Loading resource information...",
-      "unmanaged-resources-label": "Unmanaged resources"
+      "unmanaged-resources-label": "Unmanaged resources",
+      "upgrade-action": "Upgrade account"
     },
     "check-repository": {
       "check": "Check"
@@ -12738,9 +12742,6 @@
       "push-to-a-new-branch": "Push to a new branch",
       "push-to-existing-branch": "Push to an existing branch"
     }
-  },
-  "provisioning-alert": {
-    "retry": "Retry"
   },
   "public-dashboard": {
     "acknowledgment-checkboxes": {
